# CRUD/src/main/java/co/edu/uniquindio/CRUD/controladores/AutenticacionController.java
@@ -117,6 +117,9 @@ public class AutenticacionController {
         }catch(UsuarioNoEncontradoException e){
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body(new MensajeDTO<>(true, e.getMessage()));
+        }catch(UsuarioInactivoException e){
+            return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                    .body(new MensajeDTO<>(true, e.getMessage()));
         }catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body(new MensajeDTO<>(true, e.getMessage()));
